# MongeAmpereDG

./: CMakeLists.txt  Makefile  README.md  dune-mongeampere.pc.in  dune.module
FEniCS/: DG Brenner.py  MA_iterated.py  convert_array_in_third_coordinate.py  poisson.py
FreeFM/: iterated Monge ampere DG case 1.edp  iterated simple Monge ampere DG.edp  simple Monge ampere DG.edp
Matlab/: export_c.m  export_x.m  init_C.m  init_C_small.m  quadr_prog_convexify.m
TEX dokumente/: DG Formulierung mit Rand.tex  DG Formulierung.tex  Fortschritte Stichpunkte.tex  Implementierung.tex  Notizen für FE.tex  brenner experimente.tex
Testing/: CMakeLists.txt  test-deVeubeke.cc  test-deVeubeke.hh  testAdolc.cpp  testFunctionPlot.cpp  testPointer.cpp  test_PS12.cpp  test_nurbs_fit.cpp  testlocalBezier.cpp  testlocalBezier.h
cmake/: FindIPOPT_LIB.cmake
easymesh/: compile.sh  easymesh_1_4.c
include/: CMakeLists.txt  Callback_utility.hpp  ConditionEstimator.hpp  ConvexHullAlgorithms.hpp  Convexifier.hpp  ConvexifyNLP.hpp  Equad.hpp  Fquad.hpp  ImageFunction.hpp  Integrator.hpp  MA_solver.hh  MAconfig.h  Plotter.hpp  SmoothImageFunction.h  Tmass.hpp  Tmatrix.hpp  Tmyantecell.hpp  Tqr.hpp  Tshape.hpp  Tsolver.hpp  Tsolver_general.hpp  Tsolver_special.hpp  Tsolver_special_POISSON.hpp  UnitCube.h  blas_bindings.hpp  boundary_handler.hpp  c0_converter.hpp  class_Tmass.hpp  class_Tsolver_old.hpp  config.hpp  eiquadprog.hpp  grid_config.hpp  k_mesh.hpp  lapack_bindings.hpp  matlab_export.hpp  mesh.hpp  problem_data.h  progressbar.hpp  tmybasecell.hpp  tmycommencelldata.hpp  (+3 more)
input/: solver.ini
inputData/: MXellipse.msh  MXellipse0.msh  MXellipse1.msh  (+13 more)
source/: CMakeLists.txt  Callback_utility.cpp  Callback_utility.hpp  ConvexHullAlgorithms.cpp  Convexifier.cpp  Convexifier.hpp  ConvexifyNLP.cpp  Eigen_utility.cpp  Eigen_utility.hpp  Plotter.cpp  Plotter.hpp  Tmass.cpp  Tshape.cpp  Tsolver.hpp  Tsolver_general.cpp  Tsolver_special_AM.cpp  Tsolver_special_POISSON.cpp  boundary_handler.cpp  c0_converter.cpp  callback.hpp  config.hpp  convexify.cpp  grid_config.cpp  mesh.cpp  plot.cpp  unittest.cpp  utility.cpp  utility.hpp
source/Dogleg/: doglegMethod.hpp  newtonMethod.hpp  utils.hpp
source/grid/: CMakeLists.txt  Equad.hpp  Fquad.hpp  Makefile  Tmass.cpp  Tmass.hpp  Tmyantecell.hpp  Tshape.cpp  Tshape.hpp  boundary_handler.cpp  boundary_handler.hpp  c0_converter.cpp  c0_converter.hpp  cmake_install.cmake  grid_config.cpp  grid_config.hpp  tmybasecell.hpp  tmycommencelldata.hpp  tmyleafcell.hpp
source/test/: CMakeLists.txt  init_stiffnessmatrix.cpp  init_stiffnessmatrix.hpp  test_utils.cpp  test_utils.hpp
src/: Assembler.cpp  Assembler.h  Assembler.hh  Assembler.hpp  CMakeLists.txt  Dof_handler.hpp  FEC0C1distinguisher.cpp  FEC0C1distinguisher.hpp  ImageFunction.cpp  ImageFunction.hpp  Integrator.hpp  MA_OT_image_solver.cpp  MA_OT_image_solver.h  MA_OT_solver.cpp  MA_OT_solver.h  MA_OT_solver.hh  MA_reflector_solver.cpp  MA_reflector_solver.h  MA_refractor_solver.cpp  MA_refractor_solver.h  MA_solver.cpp  MA_solver.h  MA_solver.hh  MAconfig.h  Makefile.am  Plotter.cc  Plotter.h  Plotter.hh  SmoothImageFunction.h  TensorElement.hh  UnitCube.h  UnitCube.hh  boundaryHandler.cpp  boundaryHandler.h  boundaryHandler.hh  config.h  convert_dat_to_bmp.cpp  dune_mongeampere.cc  dune_mongeampere_OT.cc  dune_mongeampere_OT.cpp  (+25 more)
src/Callback/: Callback_utility.hpp
src/Dogleg/: Petsc_utility.cc  Petsc_utility.hh  doglegMethod.hpp  newtonMethod.hpp  utils.cpp  utils.hpp
src/IO/: CMakeLists.txt  Plotter.cc  Plotter.h  hdf5Export.hpp  imageOT.hpp  nurbsWriter.cpp
src/MethodEllipsoids/: ellipsoids.ini  geometry.ini  init_with_ellipsoid_method.cpp  init_with_ellipsoid_method.hpp
src/NURBS/: example_ud.cpp  example_write.cpp
src/OT/: CMakeLists.txt  MA_OT_image_Operator.h  MA_OT_image_solver.cpp  MA_OT_image_solver.h  MA_OT_solver.cpp  MA_OT_solver.h  MA_OT_solver.hh  operator_MA_OT.cpp  operator_MA_OT.h  operator_MA_OT_Linearisation.cpp  operator_MA_OT_Linearisation.hpp  operator_MA_OT_Neilan.cpp  operator_MA_OT_Neilan.h  problem_data_OT.h
src/Operator/: linear_system_operator_poisson_DG.h  linear_system_operator_poisson_DG.hh  linear_system_operator_poisson_NeumannBC.h  operator_MA_Neilan_DG.cpp  operator_MA_Neilan_DG.h  operator_MA_Neilan_DG.hh  operator_MA_OT.cpp  operator_MA_OT.h  operator_MA_OT.hh  operator_MA_OT_Neilan.h  operator_MA_refl_Brenner.cpp  operator_MA_refl_Brenner.h  operator_MA_refl_Brenner.hh  operator_MA_refl_Neilan_DG.h  operator_MA_refl_Neilan_DG.hh  operator_MA_refr_Brenner.cpp  operator_MA_refr_Brenner.h  operator_MA_refr_Brenner.hh  operator_coll_MA_refr_Brenner.h  operator_discrete_Hessian.h  operator_discrete_Hessian.hh
src/Optics/: CMakeLists.txt  MA_reflector_solver.cpp  MA_reflector_solver.h  MA_refractor_solver.cpp  MA_refractor_solver.h  init_with_ellipsoid_method.cpp  init_with_ellipsoid_method.hpp  operator_MA_refl_Brenner.cpp  operator_MA_refl_Brenner.h  operator_MA_refl_Neilan_DG.h  operator_MA_refr_Brenner.cpp  operator_MA_refr_Brenner.h  operator_MA_refr_Linearisation.cpp
src/Solver/: Assembler.cpp  Assembler.h  AssemblerLagrangian.cpp  AssemblerLagrangianBoundary.cpp  CMakeLists.txt  ConvexifyNLP.cpp  FEBasisFilter.cpp  FEBasisHandler.cpp  FEBasisHandler.hpp  FETraits.hpp  MA_solver.cpp  MA_solver.h  boundaryHandler.cpp  boundaryHandler.h  solver_config.cpp  solver_config.h
src/localfunctions/: MAmixedbasis.hh  MAmixedbasisC0.hh  MAmixedbasisC0C0.hh  PS12SSplineFiniteElementCache.hh  PowellSabin12SSplineBasis.hh  PowellSabin12SSplinenodalbasis.hh  TensorElement.hh  bernsteinbezier32dlocalcoefficients.hh  bernsteinbezierk2dlocalcoefficients.hh  bsplinebasis.hh  deVeubeke.hh  deVeubekeFiniteElementCache.hh  deVeubekebasis.hh  deVeubekebasisNew.hh  deVeubekecoefficients.hh  deVeubekefunctionspacebasis.hh  deVeubekelocalbasis.hh  deVeubekelocalinterpolation.hh  deveubekequadraturerule.hh  localbasis.hh  macroquadraturerules.hh  mixedElement.hpp  pk2d.hh  pk2dlocalbasis.hh  test-PS12SSpline.cc  test-deVeubeke.cc  test-deVeubeke.hh  test-deVeubekeNew.cc
(+452 files in other folders)
